<resources>
    <string name="app_name">Map Sample</string>
    <string name="title_activity_maps">Map</string>
    <string name="commentEditView">Comment</string>
    <string name="locationTextView">Location Here</string>
    <string name="dateTextView">Date Here</string>
    <string name="postButton">POST</string>
    <string name="postImageView">postImage</string>
    <string name="commentTextView">Comment Here</string>
    <string name="editButton">EDIT</string>
    <string name="updateButton">UPDATE</string>
    <string name="addPostButton">ADD POST</string>
    <string name="search_title">search</string>
    <string name="search_hint">Type your keyword here</string>
    <string name="LeftTabItemText">MAP</string>
    <string name="CenterTabItemText">ADD POST</string>
    <string name="RightTabItemText">POST LIST</string>
</resources>
