<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_vertical">

        <ImageView
            android:id="@+id/imgIcon"
            android:layout_width="100dp"
            android:layout_height="match_parent"
            android:contentDescription="@string/postImageView"
            android:scaleType="fitXY"
            android:src="@mipmap/ic_launcher" />
        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TableRow android:paddingBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Location: "
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtLocation"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:maxWidth="20dp"
                    android:text="@string/locationTextView"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </TableRow>

            <TableRow android:paddingBottom="10dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="PostDate: "
                    android:textColor="#000"
                    android:textSize="15sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtPostDate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/dateTextView"
                    android:textColor="#000"
                    android:textSize="15sp" />
            </TableRow>
        </TableLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>